# yalambda

./: README.md  pyproject.toml
examples/github-to-discord-webhook/: README.md  github_issues.py  index.py  requirements.txt
yalambda/: __init__.py  __main__.py  async_utils.py  core.py  when.py
